syntax = "proto3";

message JoinGroup {
}

message BroadcastAll {
  bytes data = 1;
}

message BroadcastSector {
  uint64 targetSector = 1;
  bytes data = 2;
}

// echoes the same data back to the sender:
message Echo {
  bytes data = 1;
}

message GroupMessage {
  string group = 1;
  int64  playerTime = 2;
  int64  serverTime = 3;
  uint32 playerIndex = 4;
  uint64 playerInSector = 5;

  oneof message {
    JoinGroup       joinGroup = 10;
    BroadcastAll    broadcastAll = 11;
    BroadcastSector broadcastSector = 12;
    Echo            echo = 13;
  }
}
